# jobs_rust

./: Cargo.toml  README.md  example.rs  jobs.db-shm  jobs.db-wal
example/: example.rs
examples/: example.rs  jobs.db  jobs.db-shm  jobs.db-wal
examples/jobs/: cleanup.rs  mod.rs  process_payment.rs  send_email.rs
src/: background_job.rs  handler.rs  job.rs  jobqueue.rs  lib.rs  registry.rs  scheduler.rs  server.rs  worker.rs
src/dashboard/: mod.rs  templates.rs
src/storage/: mod.rs  sqlite.rs
